--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ build/
 
 #coffee-bean-sales-dataset.zip
 coffee-bean-sales-dataset.zip
+
+#Python virtual env
+/home/carlos/java-oop/coffee-etl/coffeeIsGreat/app/myenv
